unpackaged/main/default/objects/Account_Plan__c/Account_Plan__c.object-meta.xml
<CustomObject>
    <description>SFSUP - 306</description>
    <label>Account Plan</label>
    <nameField>
        <displayFormat>AP-{00000}</displayFormat>
        <label>Account Plan Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Account Plans</pluralLabel>
    <sharingModel>Private</sharingModel>
</CustomObject>