unpackaged/main/default/objects/Account_Plan__c/fields/Call_Cycle_Frequency__c.field-meta.xml
<CustomField>
    <fullName>Call_Cycle_Frequency__c</fullName>
    <label>Call Cycle Frequency</label>
    <required>true</required>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Weekly</fullName>
            </value>
            <value>
                <fullName>Monthly</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>