unpackaged/main/default/objects/Account_Plan__c/fields/Current_Credit_Limit__c.field-meta.xml
<CustomField>
    <fullName>Current_Credit_Limit__c</fullName>
    <formula>IF( Account__r.ParentId  &lt;&gt; null,  Account__r.Parent.Credit_Limit__c ,  Account__r.Credit_Limit__c )</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <inlineHelpText>Target Sales PA &gt; Current Credit Limit</inlineHelpText>
    <label>Current Credit Limit</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>