unpackaged/main/default/objects/Account_Plan__c/fields/Estimated_Current_Wallet_Share__c.field-meta.xml
<CustomField>
    <fullName>Estimated_Current_Wallet_Share__c</fullName>
    <formula>YTD_Sales__c  /  Potential_Value_PA__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Estimated Current Wallet Share %</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Percent</type>
</CustomField>