unpackaged/main/default/objects/Account_Plan__c/fields/Potential_Value_PA__c.field-meta.xml
<CustomField>
    <fullName>Potential_Value_PA__c</fullName>
    <label>Potential Value PA</label>
    <precision>18</precision>
    <required>true</required>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>