unpackaged/main/default/objects/Account_Plan__c/fields/Reviewed_with_Manager__c.field-meta.xml
<CustomField>
    <fullName>Reviewed_with_Manager__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Reviewed with Manager</label>
    <type>Checkbox</type>
</CustomField>