unpackaged/main/default/objects/Account_Plan__c/fields/Target_Product_C__c.field-meta.xml
<CustomField>
    <fullName>Target_Product_C__c</fullName>
    <label>Target Product C</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Cavity Units</fullName>
            </value>
            <value>
                <fullName>Cement Concrete Mortar</fullName>
            </value>
            <value>
                <fullName>Concrete Products</fullName>
            </value>
            <value>
                <fullName>Decking</fullName>
            </value>
            <value>
                <fullName>Door Furniture</fullName>
            </value>
            <value>
                <fullName>Door Jams</fullName>
            </value>
            <value>
                <fullName>Doors</fullName>
            </value>
            <value>
                <fullName>EPS</fullName>
            </value>
            <value>
                <fullName>Exterior Claddings</fullName>
            </value>
            <value>
                <fullName>Fascia Boards</fullName>
            </value>
            <value>
                <fullName>Fasteners</fullName>
            </value>
            <value>
                <fullName>Feature Flooring</fullName>
            </value>
            <value>
                <fullName>Formwork &amp; Reo</fullName>
            </value>
            <value>
                <fullName>FOW Plumb</fullName>
            </value>
            <value>
                <fullName>Framing Pine</fullName>
            </value>
            <value>
                <fullName>Internal Linings</fullName>
            </value>
            <value>
                <fullName>Joinery</fullName>
            </value>
            <value>
                <fullName>Kiln Dried Hardwood</fullName>
            </value>
            <value>
                <fullName>LVL Products</fullName>
            </value>
            <value>
                <fullName>Metal Bracing</fullName>
            </value>
            <value>
                <fullName>Metal Framing</fullName>
            </value>
            <value>
                <fullName>Nails</fullName>
            </value>
            <value>
                <fullName>Prefab Frame</fullName>
            </value>
            <value>
                <fullName>Prefab Trusses</fullName>
            </value>
            <value>
                <fullName>Render</fullName>
            </value>
            <value>
                <fullName>Roofing Products</fullName>
            </value>
            <value>
                <fullName>Screws</fullName>
            </value>
            <value>
                <fullName>Sheet Bracing</fullName>
            </value>
            <value>
                <fullName>Sheet Flooring</fullName>
            </value>
            <value>
                <fullName>Stairs</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>