unpackaged/main/default/objects/Account_Plan__c/fields/Target_Sales_PA__c.field-meta.xml
<CustomField>
    <fullName>Target_Sales_PA__c</fullName>
    <formula>Potential_Value_PA__c  *  Target_Wallet_Share__c  -  YTD_Sales__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Target Sales PA</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>