unpackaged/main/default/objects/Account_Plan__c/fields/Target_Segment_B__c.field-meta.xml
<CustomField>
    <fullName>Target_Segment_B__c</fullName>
    <label>Target Segment B</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Slab</fullName>
            </value>
            <value>
                <fullName>Frame</fullName>
            </value>
            <value>
                <fullName>Lock Up</fullName>
            </value>
            <value>
                <fullName>Fix</fullName>
            </value>
            <value>
                <fullName>Fit Out</fullName>
            </value>
            <value>
                <fullName>Landscaping</fullName>
            </value>
            <value>
                <fullName>Ancillary</fullName>
            </value>
            <value>
                <fullName>Beaumont Tiles</fullName>
            </value>
            <value>
                <fullName>S&amp;I</fullName>
            </value>
            <value>
                <fullName>Prefab F&amp;T</fullName>
            </value>
            <value>
                <fullName>None</fullName>
                <isActive>false</isActive>
                <label>None</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>