unpackaged/main/default/objects/Account_Plan__c/fields/Target_Wallet_Share__c.field-meta.xml
<CustomField>
    <fullName>Target_Wallet_Share__c</fullName>
    <label>Target Wallet Share %</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Percent</type>
</CustomField>