unpackaged/main/default/objects/Account_Plan__c/fields/Test_1__c.field-meta.xml
<CustomField>
    <fullName>Test_1__c</fullName>
    <label>Test 1</label>
    <length>100</length>
    <type>Text</type>
</CustomField>