unpackaged/main/default/objects/Account_Plan__c/fields/Test_2__c.field-meta.xml
<CustomField>
    <fullName>Test_2__c</fullName>
    <label>Test 2</label>
    <length>100</length>
    <type>Text</type>
</CustomField>