unpackaged/main/default/objects/Account_Plan__c/fields/Test_3__c.field-meta.xml
<CustomField>
    <fullName>Test_3__c</fullName>
    <label>Test 3</label>
    <length>100</length>
    <type>Text</type>
</CustomField>