unpackaged/main/default/objects/Account_Plan__c/fields/YTD_sales_Stores__c.field-meta.xml
<CustomField>
    <fullName>YTD_sales_Stores__c</fullName>
    <formula>Account__r.YTD_Sales_Stores__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>YTD sales -Stores</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>