unpackaged/main/default/objects/Account_Plan__c/recordTypes/Builders.recordType-meta.xml
<RecordType>
    <fullName>Builders</fullName>
    <active>true</active>
    <label>Builders</label>
</RecordType>