unpackaged/main/default/objects/Account_Plan__c/validationRules/Account_Owner.validationRule-meta.xml
<ValidationRule>
    <fullName>Account_Owner</fullName>
    <active>true</active>
    <description>Account owner is different from the logged in user</description>
    <errorConditionFormula>AND(Account__r.OwnerId &lt;&gt; OwnerId, AND(
NOT(OR($Profile.Name = &quot;System Administrator&quot;,
$Profile.Name = &quot;CPQ Integration User&quot;,
$Profile.Name = &quot;Integrations User&quot;, $Profile.Name = &quot;Sales Manager&quot;)))
)</errorConditionFormula>
    <errorMessage>An Account Plan can only be created by the Account owner.</errorMessage>
</ValidationRule>