unpackaged/main/default/objects/Account_Plan__c/validationRules/Create_Account_Plan.validationRule-meta.xml
<ValidationRule>
    <fullName>Create_Account_Plan</fullName>
    <active>true</active>
    <errorConditionFormula>OR(ISNULL(Account__r.ParentId), Account__r.Has_Child_Accounts__c)</errorConditionFormula>
    <errorMessage>Account Plans can only be created for child accounts</errorMessage>
</ValidationRule>