unpackaged/main/default/objects/Account_Plan__c/listViews/My_Account_Plans.listView-meta.xml
<ListView>
    <fullName>My_Account_Plans</fullName>
    <columns>NAME</columns>
    <columns>Account__c</columns>
    <columns>Start_Date__c</columns>
    <columns>End_Date__c</columns>
    <columns>Status__c</columns>
    <filterScope>Mine</filterScope>
    <label>My Account Plans</label>
    <sharedTo>
        <roleAndSubordinates>AU_National_Sales_Manager_Builders</roleAndSubordinates>
    </sharedTo>
</ListView>